Poziționează figura din tutoriatul 7

--- a/tutoriate/tutoriat07.tex
+++ b/tutoriate/tutoriat07.tex
@@ -219,7 +219,7 @@ Grupul diedral de ordin \(n\) se referă la simetriile unui poligon regulat cu \
 \end{enumerate}
 
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \caption*{Subiectul de la restanță la Mincu, pentru cei care vor să-și testeze cunoștințele:}
     \includegraphics[width=0.75\paperwidth]{subiect-restanta}
     \centering
