--- a/main.tex
+++ b/main.tex
@@ -75,6 +75,6 @@
 \input{./tutoriate/tutoriat07}
 \input{./tutoriate/tutoriat08}
 \input{./tutoriate/tutoriat09}
-\input{./tutoriate/tutoriat_sesiune}
+\input{./tutoriate/tutoriat10}
 
 \end{document}
