--- a/tutoriate/tutoriat10.tex
+++ b/tutoriate/tutoriat10.tex
@@ -130,6 +130,8 @@ B = \Set{
 \end{exercise}
 \end{comment}
 
+\newpage
+
 \section*{Sfaturi}
 \begin{itemize}
     \item La ambii profesori este important să scrii toată rezolvarea \textbf{pas cu pas}, și să fie \textbf{corect} din punct de vedere logic.
