Folosește „Rezolvare” în loc de „Demonstrație”

--- a/commands.tex
+++ b/commands.tex
@@ -20,3 +20,5 @@
 \newcommand{\dihedralgroup}{\symrm{D}}
 
 \newcolumntype{C}{>{\(}c<{\)}}
+
+\addto\captionsromanian{\renewcommand*{\proofname}{Rezolvare}}
