Adaugă rezolvarea examenului la Mincu din 2020

--- a/main.tex
+++ b/main.tex
@@ -76,5 +76,7 @@
 \input{./tutoriate/tutoriat08}
 \input{./tutoriate/tutoriat09}
 \input{./tutoriate/tutoriat10}
+\input{./tutoriate/examen_baetica_rezolvat}
+\input{./tutoriate/examen_mincu_rezolvat}
 
 \end{document}
