--- a/tutoriate/examen_baetica_rezolvat.tex
+++ b/tutoriate/examen_baetica_rezolvat.tex
@@ -1,4 +1,5 @@
-\section*{Problema 1}
+\section*{Examen Băețica 2020 Rezolvat}
+\subsection*{Problema 1}
 
 Fie \(\sigma = (1, 3, 2, 4) \in S_4\).
 
@@ -51,7 +52,7 @@ Fie \(\sigma = (1, 3, 2, 4) \in S_4\).
     \end{proof}
 \end{enumerate}
 
-\section*{Problema 2}
+\subsection*{Problema 2}
 
 Fie \(I\) submulțimea lui \(\integers[X]\) formată din toate polinoamele care au termenul liber divizibil cu 6.
 
@@ -106,7 +107,7 @@ Fie \(I\) submulțimea lui \(\integers[X]\) formată din toate polinoamele care 
     \end{proof}
 \end{enumerate}
 
-\section*{Problema 3}
+\subsection*{Problema 3}
 
 Fie \(x, y, z \in \complex\) astfel încât
 \[
